# formal_langs

./: CMakeLists.txt  README.md  main.cpp
src/: Errors.h  Helper.cpp  Helper.h  Solver.cpp  Solver.h  Variables.h
tests/: test.cpp
